# SOLID-principles

./: CMakeLists.txt  dependencyInversionPrinciple.cpp  dip  dip.h  interfaceSegregationPrinciple.cpp  isp  isp.h  liskovSubstitutionPrinciple.cpp  lsp  lsp.h  ocp  ocp.h  openClosedPrinciple.cpp  readme.md  singleResponsibilityPrinciple.cpp  solid.h  srp  srp.h
Sample-Test1/: Sample-Test1.vcxproj  test.cpp
Sample-Test1/Debug/: Sample-Test1.exe.recipe  Sample-Test1.ilk  Sample-Test1.vcxproj.FileListAbsolute.txt
Sample-Test1/Debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Sample-Test1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sample-Test1/x64/Debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Sample-Test1.lastbuildstate
